# 123-triply-eff

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_test_bell_sampling.ipynb  02_main_plots.ipynb
scripts/: generate_test_states.py  precompute_bell_probs.py  study_mimicking_state_construction.py  study_sign_reconstruction.py  study_support_recovery.py
src/: main_plot_helper.py  np_backend.py  paulis.py  quantum_states.py  regression_plot_helper.py  tqdm_joblib.py
src/bell_sampling/: __init__.py  bell_circuit.py
src/dataloader/: analysis_io.py  mm_results.py  n1_results.py  states.py
src/mm_state/: __init__.py  v1.py  v2.py
