[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "triply_efficient"
version = "0.1.0"
authors = [
    {name = "Viet Tran", email = "viet_thuong.tran@jku.at"},
]
description = "One, Two, Three: One Empirical Evaluation of a Two-Copy Shadow Tomography Scheme with Triple Efficiency"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.6",
    "ipython>=8.32.0",
    "joblib>=1.4.2",
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.flit.module]
name = "src"

